[package]
name = "rust-tetris"
version = "0.1.0"
edition = "2021"
description = "This is a simple implemented of the game Tetris."
authors = ["Naotsugu Kobayashi <naotsugukobayashi@gmail.com>"]
homepage = "https://github.com/naotsugu/rust-tetris"
documentation = "https://github.com/naotsugu/rust-tetris"
repository = "https://github.com/naotsugu/rust-tetris.git"
license = "MIT"

[dependencies]
rand = "0.8.5"
softbuffer = "0.4.1"
tiny-skia = "0.11.4"
winit = "0.29.15"
